# patterns

./: .gitignore  README.md  controller.py  controller_student.py  factory.py  factory_vehicle.py  oop_bank_account.py  oop_bank_account_polymorphism.py  pyproject.toml  singleton.py  singleton_db_connection.py  strategy.py  strategy_sorting.py
concepts/: decorator_examples.py  generator.py  iterator_custom.py  oop_bank_account_polymorphism.py  types_info.py
patterns/: controller.py  factory.py  factory_vehicle.py
